--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
 #marquez, #butler, #leguin, #tie, #error {
   display: none;
 }
+
+.jumbotron {
+  padding-top: 5px;
+  padding-bottom: 15px;
+  margin: 10px;
+}
+
+#title {
+  font-family: 'Pacifico', cursive;
+}
+
+h3, h4 {
+  font-family: 'Quicksand', sans-serif;
+}
+
+.row {
+  margin: 10px;
+}
+
+.btn-success.btn-lg.active {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: 'Pacifico', cursive;
+}
