--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,10 @@
   font-family: 'Pacifico', cursive;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
+
 h3, h4 {
   font-family: 'Quicksand', sans-serif;
 }
